DuPont DevSB/src/objects/CustomerInformation__c.object
<CustomObject>
    <description>This object will store the additional details related to ERP Account ,Created as a part of Req.84.</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <description>Lookup to the Account Object.</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Information</relationshipLabel>
        <relationshipName>Additional_Account_Informations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field store the additional deatils about the customer.</description>
        <label>Description</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <description>This field will be used to store any link related to the customer</description>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>This Field will store the Title details of Customer Infomartion.</description>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Customer Information</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>CI Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>